# cursor-workshop-template

./: .dockerignore  .mcp.json  .pre-commit-config.yaml  .textlintrc.json  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  compose.yml  cursor_1st_issue_process.md  cursor_api_tdd_history.md  cursor_cloud_run_mcp.md  docker-compose.yml  error.txt  pyproject.toml
.cursor/rules/: api-development.mdc  code-quality-enforcement.mdc  development-workflow.mdc  pep8-enforcement.mdc  python-structure.mdc  testing.mdc
.devcontainer/: devcontainer.json
api/: README.md  main.py  pyproject.toml  requirements.txt
docker/: Dockerfile  build.sh  entrypoint.sh  run.sh
docs/: cloud-run-mcp-setup.md  cursor-ai-troubleshooting.md  cursor-workshop-handson.md  mcp-setup.md
handson-web/: index.html
tests/: context.py
ui/: main.py  pyproject.toml  requirements.txt
